# The-AI-Engineer-Challenge

./: README.md  demo.html  index.html  pyproject.toml  requirements.txt  run_dev.py  run_prod.py  vercel.json
api/: README.md  app.py  requirements.txt
frontend/: README.md  index.html  script.js  styles.css
